<resources>
    <string name="app_name">Samsung Final</string>
    <string name="new_search">New Search</string>
    <string name="txt_history">History:</string>
    <string name="clear_history">Clear history</string>
    <string name="home">To Main</string>
    <string name="city">City:</string>
    <string name="date_start">From:</string>
    <string name="date_end">To:</string>
    <string name="choice">Сhoose</string>
    <string name="find">Find</string>
    <string name="events_list_title">Events</string>
    <string name="ekb">Yekaterinburg</string>
    <string name="kzn">Kazan</string>
    <string name="msk">Moscow</string>
    <string name="nnv">Nizhny Novgorod</string>
    <string name="nsk">Novosibirsk</string>
    <string name="spb">St. Petersburg</string>
    <string name="age">Age restriction</string>
    <string name="when">When:</string>
    <string name="description">Description:</string>
    <string name="location">Location:</string>
    <string name="address">Address:</string>
    <string name="phone">Phone:</string>
    <string name="kudago">Detail about event on kudago.com:</string>
    <string name="categories">Categories:</string>
    <string name="price">Price:</string>
    <string name="publication_date">Publication date:</string>

</resources>