<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EventDetailActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <!-- title; //- название   -->
            <TextView
                android:id="@+id/event_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"/>
            <!-- List<Date> dates; //- даты проведения
                {start_date;start_time;start;end_date;end_time;end; }  -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/when"
                android:textSize="20sp"/>
            <ListView
                android:id="@+id/event_list_dates"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </ListView>
            <!-- age_restriction; //- возрастное ограничение  -->
            <TextView
                android:id="@+id/event_age_restriction"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"/>
            <!-- List<Image> images; //- картинки
                    {  image; }  -->
            <ListView
                android:id="@+id/event_list_images"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </ListView>

            <!-- TextArea description; //- описание  -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:textSize="20sp"/>
            <WebView
                android:id="@+id/event_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp" />

            <!-- Location location; { name;} //- город проведения -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/location"
                android:textSize="20sp"/>
            <TextView
                android:id="@+id/event_city_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"/>
            <!-- Place place; //- место проведения
                {title;address;phone;site_url;}  -->
            <TextView
                android:id="@+id/event_place_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/address"
                android:textSize="20sp"/>
            <TextView
                android:id="@+id/event_place_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/phone"
                android:textSize="20sp"/>
            <TextView
                android:id="@+id/event_place_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"/>
            <TextView
                android:id="@+id/event_place_site_url"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"/>
            <!-- site_url; //- адрес события на сайте kudago.com  -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/kudago"
                android:textSize="20sp"/>
            <TextView
                android:id="@+id/event_site_url"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"/>
            <!-- List<String> categories; //- список категорий  -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/categories"
                android:textSize="20sp"/>
            <ListView
                android:id="@+id/event_list_categories"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </ListView>
            <!-- List<String> tags; //- тэги события -->
            <ListView
                android:id="@+id/event_list_tags"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </ListView>
            <!-- price; //- стоимость  -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/price"
                android:textSize="20sp"/>
            <TextView
                android:id="@+id/event_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"/>
            <!-- publication_date; //- дата публикации  -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/publication_date"
                android:textSize="20sp"/>
            <TextView
                android:id="@+id/event_publication_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </ScrollView>

</LinearLayout>